# marketing_AI

./: .env.example  .gitignore  CLAUDE.md  package-lock.json  package.json
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  auth.py  errors.py  permissions.py  security.py  settings.py
backend/app/db/: bootstrap.py  seeds.py  session.py
backend/app/domain/: status_rules.py
backend/app/graphs/: __init__.py  content.py  review.py  state.py
backend/app/models/: __init__.py  asset.py  audit_log.py  content.py  job.py  membership.py  merchant.py  merchant_setting.py  publish_result.py  report.py  request_log.py  review.py  user.py
backend/app/repositories/: database.py  memory.py
backend/app/schemas/: admin.py  asset.py  audit.py  auth.py  common.py  content.py  job.py  merchant_setting.py  observability.py  publish.py  report.py  review.py
backend/app/services/: admin.py  asset.py  audit.py  auth.py  content.py  image_card.py  image_overlay.py  image_variant.py  job.py  merchant_setting.py  mock_seed.py  observability.py  publish.py  publish_result.py  report.py  review.py
backend/harness_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: execute.py  init_mock_db.py  start_backend.sh
backend/tests/: conftest.py  test_admin_lists.py  test_api_contract.py  test_assets.py  test_audit_observability.py  test_contents.py  test_health.py  test_image_card.py  test_merchant_settings.py  test_nano_banana_adapter.py  test_reviews_reports_jobs.py  test_security.py  test_settings.py
docs/: ADR.md  (+9 more)
(+71 files in other folders)
