[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harness-framework"
version = "0.1.0"
description = "Phase 1 FastAPI scaffold for harness engineering"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.111,<1",
  "langgraph>=0.2,<1",
  "pydantic>=2,<3",
  "sqlalchemy>=2.0,<3",
  "alembic>=1.13,<2",
  "celery>=5.4,<6",
  "redis>=5,<6",
  "psycopg[binary]>=3.1,<4",
  "typing-extensions>=4.9,<5",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "httpx>=0.27,<1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
